tests/positive/maps/count_alias/input.ci
void main() {
    int[string] m = ["a": 1, "b": 2];
    print(toString(count(m)) + "\n");
}
