tests/negative/maps/duplicate_key/input.ci
void main() {
    int[string] m = ["a": 1, "a": 2];
}
